<resources>
    <string name="app_name">BD</string>
    <string name="noAccount">Don\'t have an account? <b>Register.</b></string>
    <string name="lorem" translatable="false">Qui quidem vero ab omnis provident. At ullam facilis illo aperiam magni voluptatum quisquam id. Saepe veritatis voluptates corrupti voluptatem eos maiores.</string>
    <string name="shared">Shared</string>
    <string name="notShared">Not Shared</string>
    <string name="filter">Filter</string>
    <string name="room">Room</string>
    <string name="rooms">Rooms</string>
    <string name="landlordList">Landlord Ad List</string>
    <string name="studentAdList">Avaiable Rooms List</string>
    <string name="wait">Please Wait...</string>
    <string name="registe">Creating account</string>
    <string name="fomatInvalid">in invalid format</string>
    <string name="insertPass">Please enter a password</string>
    <string name="insertName">Please enter a name</string>
    <string name="insertPassCaracter">Please enter a password with at least 6 characters</string>
    <string name="registerFail">Could not register</string>
    <string name="save">Saving...</string>
    <string name="registeredAccount">Registered account</string>
    <string name="login">Logging in...</string>
    <string name="welcome">Welcome</string>
    <string name="loginFail">Could not logging in</string>
    <string name="insertPhoneNumber">Please enter a correct phone number</string>
    <string name="erroImageSave">Error could not send the image</string>
    <string name="atualizar">Updating</string>
    <string name="perfilAtualizado">Profile updated</string>
    <string name="erroPerfilAtualizado">Error unable to update profile</string>
    <string name="camera">Camera</string>
    <string name="galeria">Gallery</string>
    <string name="erroG">Error</string>
    <string name="insertTitle">Please insert a title</string>
    <string name="insertDescription">Please insert a description</string>
    <string name="insertAddress">Please insert a address</string>
    <string name="selectOp">Please select a option</string>
    <string name="anuncioRegistado">Ad successfully registered</string>
    <string name="imageSave">Saved image</string>
    <string name="search_hint">Search for rooms</string>
    <string name="search">Search</string>
    <string name="avaliar">Assess</string>
    <string name="avaliacaoRegistada" >Ad successfully registered</string>
    <string name="avaliacaoFail" >Unable to register your review</string>
    <string name="passForget">Forget the password?</string>
    <string name="forget_password">Password Recovery</string>
    <string name="login1" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="colapse">Colapse</string>
    <string name="gender">Gender</string>
    <string name="accessible">Accessible</string>
    <string name="shared_room">Shared Room</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="create_ad">Create Ad</string>
    <string name="account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="other">Other</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="contact">Contact</string>
    <string name="verAnuncio">Ver os seus anúncios</string>
    <string-array name="sharedRoom">
        <item>Shared</item>
        <item>Not Shared</item>
    </string-array>
    <string-array name="accessible">
        <item>Accessible</item>
        <item>Not Accessible</item>
    </string-array>
    <string-array name="gender">
        <item>Both</item>
        <item>Male Only</item>
        <item>Female Only</item>
    </string-array>
    <string name="loginNeed">"You need to have login enabled! "</string>
</resources>