<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Defenicoes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Dados inciais -->
        <RelativeLayout
            android:id="@+id/dadosInciais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Imagem -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileIv"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/nomeUtilizadorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profileIv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="Utilizador Nome"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailUtilizadorTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomeUtilizadorTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="email@ipvc.pt"
                android:textSize="15sp"
                android:textStyle="italic" />

            <View
                android:id="@+id/linha"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/emailUtilizadorTV"
                android:layout_marginTop="15dp"
                android:background="#A8A1A1" />

            <Button
                android:id="@+id/criarAnuncio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/linha"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/create_ad" />

            <!-- Conta -->
            <TextView
                android:id="@+id/contaTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/criarAnuncio"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/account"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Editar Conta -->
            <LinearLayout
                android:id="@+id/editContaLL"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/contaTXT"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_edit_24" />

                <TextView
                    android:id="@+id/contaEditaPerfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.8"
                    android:text="@string/edit_profile"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

            </LinearLayout>

            <!-- Ver anuncios -->
            <LinearLayout
                android:id="@+id/verAnuncioLL"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/editContaLL"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_house_24" />

                <TextView
                    android:id="@+id/verAnuncio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.8"
                    android:text="@string/verAnuncio"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

            </LinearLayout>

            <!-- Preferencias -->
            <TextView
                android:id="@+id/prefTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/verAnuncioLL"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/preferences"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Darkmode -->
            <LinearLayout
                android:id="@+id/darkLL"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/prefTXT"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_brightness_4_24" />

                <TextView
                    android:id="@+id/prefDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.6"
                    android:text="@string/dark_mode"
                    android:textSize="15sp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.3"
                    android:checked="true" />
            </LinearLayout>

            <!-- Outros -->
            <TextView
                android:id="@+id/outrosTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/darkLL"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/other"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- TErmos e Condições -->
            <LinearLayout
                android:id="@+id/termosLL"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/outrosTXT"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_file_copy_24" />

                <TextView
                    android:id="@+id/termos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.8"
                    android:text="@string/terms_and_conditions"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

            </LinearLayout>

            <!-- Politicas de Privacidade -->
            <LinearLayout
                android:id="@+id/politicasLL"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/termosLL"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_file_copy_24" />

                <TextView
                    android:id="@+id/politicas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.8"
                    android:text="@string/privacy_policy"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

            </LinearLayout>

            <!-- Apoio -->
            <LinearLayout
                android:id="@+id/apoioLL"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/politicasLL"
                android:layout_marginStart="25dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_help_24" />

                <TextView
                    android:id="@+id/apoio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.8"
                    android:text="@string/help"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_weight="0.1"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_baseline_keyboard_arrow_right_24" />

            </LinearLayout>

            <!-- Sair -->
            <RelativeLayout
                android:id="@+id/sairLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/apoioLL"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="150dp">

                <TextView
                    android:id="@+id/sair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/log_out"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
    <!-- Menu -->
    <View
        android:id="@+id/linhaBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottom_navigation"
        android:layout_marginTop="15dp"
        android:background="#A8A1A1" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="?android:navigationBarColor"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_navigation" />
</RelativeLayout>